@startuml

title __CONTROLLER's Class Diagram__\n

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.BillingAccountDataController {
          + addMoney()
          + ban()
          + deleteBillingAccount()
          + getAllBillingAccounts()
          + getBillingAccountById()
          + getBillingAccountByOwnerId()
          + saveBillingAccount()
          + unBan()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.ProductInstanceDataController {
          + changeStatus()
          + deleteById()
          + getSubscriptionUnitsByUserId()
          + save()
          + save()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.ProductOfferingDataController {
          + ban()
          + getSubscriptionByCategory()
          + getSubscriptionById()
          + getSubscriptionByName()
          + getSubscriptions()
          + save()
          + unBan()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.StatisticsEntryDataController {
          + getStatisticsByBillingAccountId()
          + getStatisticsCategory()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.UserAccountDataController {
          + ban()
          + changeActiveBillingAccount()
          + getAll()
          + getSubscriptionsQuantity()
          + getUserAccountByData()
          + getUserAccountById()
          + saveUserAccount()
          + unBan()
          + user()
      }
    }
  }
  

  by.training.nc.sd3.controller.BillingAccountDataController o-- by.training.nc.sd3.service.BillingAccountDataService : billingAccountDataService
  by.training.nc.sd3.controller.ProductInstanceDataController o-- by.training.nc.sd3.service.ProductInstanceDataService : productInstanceDataService
  by.training.nc.sd3.controller.ProductOfferingDataController o-- by.training.nc.sd3.service.ProductOfferingDataService : productOfferingDataService
  by.training.nc.sd3.controller.StatisticsEntryDataController o-- by.training.nc.sd3.service.StatisticsEntryDataService : statisticsEntryDataService
  by.training.nc.sd3.controller.UserAccountDataController o-- by.training.nc.sd3.service.UserAccountDataService : userAccountDataService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
